修复黑翼高光遮盖并接入三种轮换攻击特效